feat(dto): se agregaron validaciones para horas nulas.