@@ -1,5 +1,6 @@
 package com.turnosrotativos.service.impl;
 
+import com.turnosrotativos.dto.ConceptoLaboralResponse;
 import com.turnosrotativos.entity.ConceptoLaboral;
 import com.turnosrotativos.repository.IConceptoLaboralRepository;
 import com.turnosrotativos.service.IConceptoLaboralService;
@@ -7,6 +8,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ConceptoLaboralServiceImpl implements IConceptoLaboralService {
@@ -14,17 +16,34 @@ public class ConceptoLaboralServiceImpl implements IConceptoLaboralService {
     private IConceptoLaboralRepository conceptoLaboralRepository;
 
     @Override
-    public List<ConceptoLaboral> obtenerConceptosLaborales(Long id, String nombre) {
+    public List<ConceptoLaboralResponse> obtenerConceptosLaborales(Long id, String nombre) {
+        List<ConceptoLaboral> conceptos;
+
         if (id != null && nombre != null) {
-            return conceptoLaboralRepository.findAll().stream()
+            conceptos = conceptoLaboralRepository.findAll().stream()
                     .filter(c -> c.getId().equals(id) && c.getNombre().contains(nombre))
-                    .toList();
+                    .collect(Collectors.toList());
         } else if (id != null) {
-            return conceptoLaboralRepository.findById(id).map(List::of).orElse(List.of());
+            conceptos = conceptoLaboralRepository.findById(id).map(List::of).orElse(List.of());
         } else if (nombre != null) {
-            return conceptoLaboralRepository.findByNombreContaining(nombre);
+            conceptos = conceptoLaboralRepository.findByNombreContaining(nombre);
         } else {
-            return conceptoLaboralRepository.findAll();
+            conceptos = conceptoLaboralRepository.findAll();
         }
+
+        // Mapear la lista de ConceptoLaboral a ConceptoLaboralResponse
+        return conceptos.stream()
+                .map(this::convertirAConceptoLaboralResponse)
+                .collect(Collectors.toList());
+    }
+
+    private ConceptoLaboralResponse convertirAConceptoLaboralResponse(ConceptoLaboral conceptoLaboral) {
+        ConceptoLaboralResponse response = new ConceptoLaboralResponse();
+        response.setId(conceptoLaboral.getId());
+        response.setNombre(conceptoLaboral.getNombre());
+        response.setHsMinimo(conceptoLaboral.getHsMinimo());
+        response.setHsMaximo(conceptoLaboral.getHsMaximo());
+        response.setLaborable(conceptoLaboral.getLaborable());
+        return response;
     }
 }
